fix: add another examples of images

--- a/notebooks/exercies.ipynb
+++ b/notebooks/exercies.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¡Hola! Puedo ayudarte con una variedad de tareas, como responder preguntas, proporcionar información sobre diversos temas, dar consejos, ayudarte a aprender algo nuevo, escribir textos creativos, y mucho más. ¿En qué te gustaría que te ayude hoy?\n"
+      "¡Hola! Puedo ayudarte con una variedad de cosas, como responder preguntas, proporcionar información sobre diferentes temas, asistir con tareas, dar recomendaciones de libros o películas, ayudar a aprender un nuevo idioma, y mucho más. ¿En qué específicamente te gustaría que te ayude hoy?\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,25 +87,25 @@
      "output_type": "stream",
      "text": [
       "Usuario: Explícame qué es una API REST.\n",
-      "Asistente: Lo siento, pero solo puedo ayudar con temas relacionados con lámparas de Ikea. Si tienes alguna pregunta sobre lámparas de Ikea, estaré encantado de ayudarte.\n",
+      "Asistente: Lo siento, pero solo puedo ayudar con temas relacionados con lámparas de Ikea. Si tienes preguntas sobre lámparas Ikea, estaré encantado de ayudarte.\n",
       "\n",
       "Usuario: ¿Qué tipos de lámparas de Ikea recomendáis para un salón pequeño?\n",
-      "Asistente: Ikea ofrece una variedad de lámparas adecuadas para un salón pequeño. Aquí tienes algunas recomendaciones:\n",
+      "Asistente: En un salón pequeño, es importante elegir lámparas que no ocupen mucho espacio y que ofrezcan una buena iluminación. Aquí te recomiendo algunos tipos de lámparas de Ikea que podrían ser adecuadas:\n",
       "\n",
-      "1. **Lámparas de pie**: Las lámparas de pie son perfectas para ahorrar espacio en mesas y ofrecer luz adicional. Modelos como la lámpara de pie **TÄNKVÄRD** son elegantes y no ocupan mucho espacio.\n",
+      "1. **Lámparas de pie**: Son ideales porque no ocupan espacio en la mesa y pueden proporcionar una buena iluminación general. Modelos como la lámpara de pie **HEKTAR** ofrecen un diseño compacto y moderno.\n",
       "\n",
-      "2. **Lámparas de mesa**: Puedes optar por lámparas de mesa pequeñas como la **FADO** o la **HEKTAR**, que proporcionan una luz acogedora sin ser demasiado imponentes.\n",
+      "2. **Lámparas de mesa**: Opta por modelos pequeños y ligeros como la **RANARP** o la **FADO**, que pueden colocarse sobre mesas auxiliares o estanterías sin abrumar el espacio.\n",
       "\n",
-      "3. **Lámparas de techo**: Una lámpara de techo colgante como la **HÄNGIG** puede iluminar el espacio sin ocupar espacio en el suelo. Esto es ideal para mantener el salón abierto.\n",
+      "3. **Apliques de pared**: Si quieres ahorrar espacio en el suelo y obtener una buena distribución de la luz, considera apliques como el modelo **VÄGGIS**. \n",
       "\n",
-      "4. **Aplique de pared**: Si el espacio es realmente reducido, los apliques de pared como el **RANARP** son excelentes opciones, ya que no ocupan espacio en el suelo y aportan un ambiente cálido.\n",
+      "4. **Lámparas de techo**: Las lámparas empotradas o las de tipo **huevo** pueden ser opciones efectivas si el espacio es restringido. Modelos como **HEKTAR** o **FADO** también están disponibles para instalaciones de techo.\n",
       "\n",
-      "5. **Lámparas con múltiples funciones**: Algunas lámparas como la **PAXTON** pueden ofrecer luz ambiental y ser un elemento decorativo a la vez.\n",
+      "5. **Lámparas colgantes**: Considera usar una lámpara colgante ligera que no cuelgue demasiado bajo, como la **RANARP**, que puede agregar carácter sin ocupar demasiado espacio.\n",
       "\n",
-      "Recuerda también considerar el estilo y el color de la lámpara para que combine con la decoración del salón. Si necesitas más información sobre un modelo específico, no dudes en preguntar.\n",
+      "Recuerda que la elección depende de tu estilo y la atmósfera que desees crear en el salón. ¡Espero que encuentres la lámpara perfecta para tu espacio!\n",
       "\n",
       "Usuario: ¿Qué me puedes decir sobre los sofás de Ikea?\n",
-      "Asistente: Lo siento, pero solo puedo ayudar con temas relacionados con lámparas de Ikea. Si tienes alguna pregunta sobre lámparas de Ikea, estaré encantado de ayudarte.\n"
+      "Asistente: Lo siento, pero solo puedo ayudar con temas relacionados con lámparas de Ikea. Si tienes alguna pregunta sobre lámparas, estaré encantado de asistirte.\n"
      ]
     }
    ],
@@ -213,47 +213,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagen: https://img.kwcdn.com/product/fancy/377ce740-e4ca-4b70-80d6-631545b01c20.jpg\n",
-      "Descripción detallada: ### Descripción detallada de la lámpara\n",
+      "Imagen: https://cdn.sklum.com/es/1160461/lampara-de-pie-francis.jpg\n",
+      "Descripción detallada: Esta lámpara de pie presenta un diseño moderno y elegante, ideal para complementar diversos estilos de decoración.\n",
       "\n",
-      "**Estilo:**\n",
-      "La lámpara presenta un diseño moderno y minimalista, con un enfoque en la elegancia y simplicidad. Su forma es estilizada, con un contorno alargado y curvo que proporciona un toque contemporáneo a cualquier espacio. La elección de colores cálidos en la iluminación la hace particularmente acogedora, adecuada para crear ambientes relajantes.\n",
+      "### Estilo\n",
+      "- **Estilo:** Contemporáneo, con toques minimalistas. Su forma limpia y sus líneas rectas la hacen adecuada para espacios modernos y sofisticados.\n",
+      "- **Detalles:** La combinación de los acabados mate en negro y los acentos dorados le da un toque de sofisticación y lujo.\n",
       "\n",
-      "**Materiales:**\n",
-      "El cuerpo de la lámpara parece estar hecho de un material textil ligero, posiblemente papel o tela, que permite la difusión suave de la luz. La base y las piezas de soporte pueden ser de metal, asegurando estabilidad y durabilidad. El acabado es probablemente de colores neutros, lo que facilita su integración con diferentes estilos de decoración.\n",
+      "### Materiales\n",
+      "- **Pantalla:** Metal, con un acabado mate que permite una distribución uniforme de la luz.\n",
+      "- **Estructura:** También de metal, lo que asegura durabilidad y estabilidad.\n",
+      "- **Base:** Sólida y redonda, capaz de soportar el peso de la lámpara para evitar que se vuelque.\n",
       "\n",
-      "**Tipo de luz:**\n",
-      "La lámpara emite una luz cálida, ideal para crear un ambiente cálido y acogedor. Este tipo de iluminación es perfecto para espacios donde se busca relajación, como salas de estar o dormitorios. La posibilidad de control remoto sugiere que tiene múltiples configuraciones de intensidad o temperatura de color, lo que añade versatilidad a su uso.\n",
+      "### Tipo de Luz\n",
+      "- **Iluminación:** Generalmente esta lámpara usa bombillas LED, lo que proporciona una luz cálida y acogedora, ideal para la lectura o momentos de relajación.\n",
+      "- **Direccionalidad:** Gracias a su diseño ajustable, permite dirigir la luz donde más se necesite.\n",
       "\n",
-      "**Tamaño aproximado:**\n",
-      "Aunque no se puede especificar el tamaño exacto, dada la forma y el diseño, se puede estimar que es una lámpara de pie con una altura que podría oscilar entre 1.5 y 1.8 metros. Esto la convierte en un punto focal en la habitación sin ser excesivamente dominante en el espacio.\n",
+      "### Tamaño Aproximado\n",
+      "- **Dimensiones:** Al no tener una medida exacta, se puede estimar que la lámpara tiene una altura de aproximadamente 150-170 cm y un diámetro de base de unos 30 cm.\n",
       "\n",
-      "### Recomendaciones específicas de uso y decoración\n",
+      "### Recomendaciones de Uso y Decoración\n",
+      "1. **Ubicación:** Ideal para colocar junto a un sofá o una silla de lectura en salones o espacios de entretenimiento. También puede funcionar en un rincón de una habitación para crear un área de lectura acogedora.\n",
+      "2. **Complementos:** Acompañarla con almohadones en tonos neutros o con estampados que resalten el acabado dorado puede crear armonía.\n",
+      "3. **Ambiente:** Colocar esta lámpara en un entorno donde los materiales metálicos y tonos neutros predominen ayudará a realzar su diseño.\n",
+      "4. **Acentos:** Utilizarla junto a otros elementos de decoración metálicos, como marcos dorados o mesas con acabados similares, para crear un look cohesivo.\n",
       "\n",
-      "1. **Ubicación:**\n",
-      "   - **Sala de estar:** Colócala en una esquina para suavizar el ambiente y proporcionar luz adicional cerca de un sofá o sillas. Ayuda a crear un espacio acogedor para conversaciones o relax.\n",
-      "   - **Dormitorio:** Úsala como lámpara de lectura junto a la cama, asegurando una iluminación adecuada sin ser demasiado intensa.\n",
-      "\n",
-      "2. **Combinación de colores:**\n",
-      "   - Debido a su color cálido, combina bien con tonos neutros y cálidos (beiges, marrones y pasteles). Añade elementos decorativos de madera o fibras naturales para un estilo bohemio o escandinavo.\n",
-      "   - Para un entorno más contemporáneo, acompaña la lámpara con muebles de líneas limpias y decoración en tonos grises o negro, creando un contraste elegante.\n",
-      "\n",
-      "3. **Acabado y decoración:**\n",
-      "   - Considera complementar la lámpara con accesorios como cojines o mantas en tonos similares a la lámpara para crear cohesión en el espacio.\n",
-      "   - Algunas plantas en macetas de cerámica o madera alrededor de la lámpara pueden añadir un toque de frescura y vida al ambiente.\n",
-      "\n",
-      "4. **Uso de la iluminación:**\n",
-      "   - Si la lámpara cuenta con múltiples configuraciones de luz, úsala para diferentes momentos. Una luz más tenue es ideal para relajarse, mientras que una luz más brillante puede ser útil para leer o trabajar.\n",
-      "   - Asegúrate de que esté estratégicamente ubicada para resaltar donde más se necesita la luz, minimizando las sombras duras.\n",
-      "\n",
-      "Este enfoque versátil permitirá que la lámpara se adapte a varios estilos y necesidades, convirtiéndose en un elemento clave en la decoración de cualquier habitación.\n"
+      "En resumen, esta lámpara no solo es funcional, sino que también actúa como una pieza decorativa que puede elevar el estilo de cualquier habitación.\n"
      ]
     }
    ],
@@ -289,7 +281,7 @@
     "    messages = [\n",
     "        {\n",
     "            \"role\": \"system\",\n",
-    "            \"content\": \"Eres un experto en iluminación e interiorismo especializado en lámparas. Analiza cada lámpara describiendo detalladamente su estilo, materiales, tipo de iluminación, y da recomendaciones específicas de uso y decoración.\"\n",
+    "            \"content\": \"Eres un experto en iluminación e interiorismo especializado en lámparas. Analiza cada lámpara describiendo detalladamente su estilo, materiales, tipo de iluminación, y da recomendaciones específicas de uso y decoración. En caso de no identificar una lámpara, especifica que no es una lámpara Ikea o que no puedes identificarla.\"\n",
     "        },\n",
     "        {\n",
     "            \"role\": \"user\", \n",
@@ -312,7 +304,11 @@
     "    return chat_api_with_model(messages, model=\"gpt-4o-mini\")\n",
     "\n",
     "# URL de imagen de lámpara\n",
-    "image_url = \"https://img.kwcdn.com/product/fancy/377ce740-e4ca-4b70-80d6-631545b01c20.jpg\"\n",
+    "image_url = \"https://cdn.sklum.com/es/1160461/lampara-de-pie-francis.jpg\"\n",
+    "\n",
+    "#  Doraemon - \"https://upload.wikimedia.org/wikipedia/en/b/bd/Doraemon_character.png\"\n",
+    "# Lampara alargada - \"https://img.kwcdn.com/product/fancy/377ce740-e4ca-4b70-80d6-631545b01c20.jpg\"\n",
+    "# Lámpara de pie  - \"https://cdn.sklum.com/es/1160461/lampara-de-pie-francis.jpg\"\n",
     "\n",
     "# Analizar lámpara y obtener descripción detallada\n",
     "response = analyze_lamp_with_api(image_url)\n",
