fix: explcative comments

--- a/notebooks/exercies.ipynb
+++ b/notebooks/exercies.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¡Hola! Puedo ayudarte con una variedad de cosas, como responder preguntas, proporcionar información sobre diferentes temas, asistir con tareas, dar recomendaciones de libros o películas, ayudar a aprender un nuevo idioma, y mucho más. ¿En qué específicamente te gustaría que te ayude hoy?\n"
+      "¡Hola! Puedo ayudarte con una variedad de tareas, como responder preguntas, proporcionar información sobre diversos temas, ayudarte a aprender algo nuevo, ofrecer recomendaciones de libros o películas, ayudarte a resolver problemas o darte ideas para proyectos. ¿En qué te gustaría que te ayude hoy?\n"
      ]
     }
    ],
@@ -28,17 +28,17 @@
     "load_dotenv()\n",
     "API_KEY = os.getenv(\"OPENROUTER_API_KEY\")  # Obtiene la API key de forma segura\n",
     "API_URL = \"https://openrouter.ai/api/v1/chat/completions\"  # Endpoint de OpenRouter\n",
-    "HEADERS = {\"Authorization\": f\"Bearer {API_KEY}\"}  # Cabeceras de autenticación\n",
+    "HEADERS = {\"Authorization\": f\"Bearer {API_KEY}\"}  # Cabeceras de autenticación (estándar OAuth 2.0 para API REST)\n",
     "\n",
-    "import requests\n",
+    "import requests # Biblioteca que permite hacer peticiones HTTP\n",
     "\n",
-    "def chat_api(messages):\n",
+    "def chat_api(messages): \n",
     "   data = {\n",
     "       \"model\": \"gpt-4o-mini\",  # Modelo a usar (puedes cambiarlo por otros)\n",
-    "       \"messages\": messages,    # Lista de mensajes de la conversación\n",
+    "       \"messages\": messages,    # Array de mensajes de la conversación\n",
     "   }\n",
     "   \n",
-    "   # Envía la petición POST a la API\n",
+    "   # Envía la petición HTTP POST a la API\n",
     "   response = requests.post(API_URL, headers=HEADERS, json=data)\n",
     "   \n",
     "   if response.status_code == 200:  # Si la respuesta es exitosa\n",
@@ -156,7 +156,7 @@
     "print(\"Usuario: Explícame qué es una API REST.\")\n",
     "print(\"Asistente:\", respuesta1)\n",
     "\n",
-    "# Añadimos la respuesta a la conversación para mantener contexto\n",
+    "# Añadimos la respuesta a la conversación para mantener contexto (memoria conversacional)\n",
     "messages.append({\"role\": \"assistant\", \"content\": respuesta1})\n",
     "\n",
     "# Pregunta 2: dentro del ámbito (lámparas Ikea)\n",
@@ -254,9 +254,9 @@
     "import base64\n",
     "\n",
     "def chat_api_with_model(messages, model=\"gpt-4o-mini\"):\n",
-    "    \"\"\"Versión de chat_api que acepta parámetro model\"\"\"\n",
+    "    \"\"\"Versión de chat_api que acepta imagenes\"\"\"\n",
     "    data = {\n",
-    "        \"model\": model,  # Modelo con capacidades multimodales\n",
+    "        \"model\": model,  \n",
     "        \"messages\": messages,\n",
     "    }\n",
     "    response = requests.post(API_URL, headers=HEADERS, json=data)\n",
@@ -267,8 +267,8 @@
     "\n",
     "def image_to_base64(image_url):\n",
     "    \"\"\"Convierte imagen de URL a base64 para enviar a la API\"\"\"\n",
-    "    response = requests.get(image_url)  # Descarga la imagen\n",
-    "    image_data = base64.b64encode(response.content).decode('utf-8')  # Codifica en base64\n",
+    "    response = requests.get(image_url)  # Descarga los datos binarios de la imagen a través de una petición HTTP\n",
+    "    image_data = base64.b64encode(response.content).decode('utf-8')  # Codifica en base64 (convierte los bytes a una cadena de texto)\n",
     "    return image_data\n",
     "\n",
     "def analyze_lamp_with_api(image_url):\n",
@@ -293,7 +293,7 @@
     "                {\n",
     "                    \"type\": \"image_url\",\n",
     "                    \"image_url\": {\n",
-    "                        \"url\": f\"data:image/jpeg;base64,{image_base64}\"  # Imagen codificada\n",
+    "                        \"url\": f\"data:image/jpeg;base64,{image_base64}\"  # Imagen codificada. Indicación: lo que viene a continuación es una cadena de texto que representa la imagen en base64\n",
     "                    }\n",
     "                }\n",
     "            ]\n",
@@ -303,7 +303,7 @@
     "    # Usar modelo con capacidades de visión\n",
     "    return chat_api_with_model(messages, model=\"gpt-4o-mini\")\n",
     "\n",
-    "# URL de imagen de lámpara\n",
+    "# URL de imagen\n",
     "image_url = \"https://cdn.sklum.com/es/1160461/lampara-de-pie-francis.jpg\"\n",
     "\n",
     "#  Doraemon - \"https://upload.wikimedia.org/wikipedia/en/b/bd/Doraemon_character.png\"\n",
